# model-to-market-quant-hack

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  README.md  btc_sleeve.py  conformal.py  dials_matrix.md  directional_sleeve.py  donchian_backtest.py  eth_sleeve.py  gbp_sleeve.py  kalman_calibration.py  leaderboard_pinger.py  live_trader.py  momentum_trader.py  mt5_executor.py  pair_screener.py  pinger.py  presentation.html  pyproject.toml  requirements.txt  signal_server.py  silver_long.py  silver_sleeve.py  spread_check.py  test_connection.py
Blind_leaderboard_sim/: finals_sim
advisory/: README.md  report_2026-06-22.md  requirement.txt  state.json
agents/: chat_room.py
agents/skills/trading_system_overview/: SKILL.md
macro_agent/advisory/: claude_analyst.py
macro_agent/dashboard/: .env.example  README.md  app.py  requirements.txt
outputs/: kalman_config.json
research/: __init__.py  backtest_momentum.py  crypto_backtest.py  crypto_local_screener.py  donchian_backtest.py  fetch_binance.py  metals_screener.py
results/: summary.md
sleeves/: __init__.py  directional_sleeve.py  directional_trader.py  eth_sleeve.py  gold_sleeve.py  silver_sleeve.py
tests/: test_conformal.py  test_gold_strategy.py  test_kalman_live.py
trading_engine/: __init__.py  kalman_live.py  live_trader.py  mt5_executor.py
trading_engine/ops/: connect_test.py  dry_loop.py  pinger.py  spread_check.py  telegram_diagnostic.py
trading_engine/ops/PCE_rel/: Pce_fire.py  directional_sleeve.py  pce_circuit_breaker.py
